@@ -1,5 +1,5 @@
 /* BSD-compatible versions of getpgrp function.
-   Copyright (C) 1991, 92, 94, 95, 96, 97, 2000 Free Software Foundation, Inc.
+   Copyright (C) 1991,92,94,95,96,97,2000,2002 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -22,10 +22,11 @@
 /* Don't include unistd.h because it declares a conflicting
    prototype for the POSIX.1 `getpgrp' function.  */
 extern pid_t __getpgid (pid_t);
+extern pid_t __getpgid_internal (pid_t);
 extern pid_t __bsd_getpgrp (pid_t);
 
 pid_t
 __bsd_getpgrp (pid_t pid)
 {
-  return __getpgid (pid);
+  return INTUSE(__getpgid) (pid);
 }
